fixed responsiveness for header and overlap of header + about section

--- a/styles.css
+++ b/styles.css
@@ -421,6 +421,7 @@ footer {
     max-width: 100%;
     padding-left: 0;
     text-align: center;
+    font-size: 6vh;
   }
 
   #skills-about-section {
